quick fixes to combat tracker: increased grid gap, improved overall structure/spacing

--- a/styles/cyphercombat.css
+++ b/styles/cyphercombat.css
@@ -26,9 +26,13 @@
   border-color: var(--color-border-highlight);
 }
 
+#combat-tracker li.combatant.active .combat-input :is(input, p) {
+  text-shadow: 1px 1px 4px var(--color-shadow-dark);
+}
+
 #combat-tracker li.combatant .token-image {
-  height: auto;
   width: 100%;
+  margin: 2px auto 0;
 }
 
 #combat-tracker .defeated {
@@ -40,40 +44,9 @@
   text-align: center;
 }
 
-#combat-tracker :is(div.markers, .weapons) {
-  width: fit-content;
-}
-
-#combat-tracker .markers p {
-  margin: 0 0 0 5px;
-}
-
-#combat-tracker .markers input {
-  width: 28px;
-  text-align: right;
-  background: none;
-  border: none;
-}
-
-#combat-tracker .markers input#quantity-value {
-  text-align: right;
-}
-
-#combat-tracker .markers input#quantity-max {
-  text-align: left;
-}
-
-#combat-tracker .markers .quantity {
-  background: rgba(0, 0, 0, 0.05);
-  border: 1px solid var(--color-border-light-tertiary);
-  border-radius: 3px;
-  text-shadow: 1px 1px 4px var(--color-shadow-dark);
-}
-
 #combat-tracker .combat-input input {
   color: white;
   height: 20px;
-  text-shadow: 1px 1px 4px var(--color-shadow-dark);
 }
 
 #combat-tracker .combat-input input.hidden {
@@ -84,7 +57,6 @@
   height: 20px;
   margin: 0;
   padding-top: 1px;
-  text-shadow: 1px 1px 4px var(--color-shadow-dark);
 }
 
 #combat-tracker li.combatant .token-name {
@@ -92,15 +64,17 @@
 }
 
 #combat-tracker .img {
-  line-height: normal;
+  align-content: center;
+  display: grid;
   grid-row-end: span 3;
   grid-column-end: span 2;
+  line-height: normal;
 }
 
 #combat-tracker li.combatant .roll {
   background-size: 20px;
   height: 20px;
-  margin: -2px auto 2px;
+  margin: 5px auto;
 }
 
 #combat-tracker li.combatant .roll.hidden {
@@ -142,7 +116,7 @@
 
 #combat-tracker .combatant {
   display: grid;
-  gap: 1px;
+  gap: 5px;
   grid-column: span 12 / span 12;
   grid-row: span 3 / span 3;
   grid-template-rows: repeat(3, minmax(0, 23px));
@@ -188,6 +162,11 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+#combat-tracker li.combatant .token-initiative .initiative {
+  display: inline-block;
+  margin: 5px auto;
 }
 
 #combat-config div.form-group:first-of-type {
